Changed fixed width of #logo_headline, nav ul, and main to 70%; Added margin: 0 auto; for those elements to center them; Added padding to nav ul to get vertically in the same line as the logo, like in the example img; Changed content of <main> style, to be better responsive and look good on different screensizes; Useing classes for the images to have a better position of them;Added breakpoint @1290px with Mediaquerry to change 70% width to 100% on smaller screens

--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ header {
 	color: #fff;
 	font-size: 1em;
 	padding: 20px 0;
+	width: 70%;
+	margin: 0 auto;
 }
 
 #logo_headline span {
@@ -33,7 +35,9 @@ nav {
 
 nav ul {
 	list-style: none;
-	padding: 0 20px;
+	width: 70%;
+	margin: 0 auto;
+	padding-left: 33px;
 }
 
 nav li {
@@ -44,4 +48,60 @@ nav a {
 	text-decoration: none; /* remove undline */
 	color: #fff;
 	padding: 0 10px;
+}
+
+/* ----------| Main Content | Home |---------- */
+
+main {
+	width: 70%;
+	margin: 0 auto;
+	margin-top:20px;
+}
+
+.image-block {
+	float: left;
+	min-width: 450px;
+	width:48%;
+	height:330px;
+	margin-bottom: 20px;
+}
+
+.image-container [class^="pic"] {
+	width: 100%;
+	position: absolute;
+}
+
+.pic-group {
+	bottom: 0;
+}
+
+.pic-kids {
+	bottom: 0;
+	right: -36px;
+}
+
+.image-container {
+	height:300px;
+	overflow: hidden;
+	position: relative;
+}
+
+.image-text {
+	font-size: 1.5em;
+}
+
+.float_r {
+	float: right;	
+}
+
+
+
+
+@media (max-width: 1290px) {
+
+#logo_headline, main, nav ul {
+	width: 100%;
+}
+
+
 }
